[tool.poetry]
name = "visual-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "visual_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
ortools = "^9.5.2237"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
